--- a/8-TPs/FonteCristo.html
+++ b/8-TPs/FonteCristo.html
@@ -31,8 +31,8 @@
 		<div class="CajaUno animated bounceInLeft">
 			
 			
-			<button   class="MiBotonUTN" onclick="NumerosPares()" >a-N&uacute;meros Pares</button>
-			<button   class="MiBotonUTN" onclick="NumerosPares()" >b-N&uacute;meros Impares</button>
+			<button   class="MiBotonUTN" onclick="function NumerosPares()" >Function NumerosPares</button>
+			<button   class="MiBotonUTN" onclick="function NumerosImpares()" >b-N&uacute;meros Impares</button>
 			<button   class="MiBotonUTN" onclick="NumerosDivisibles()" >c-N&uacute;meros Divisibles</button>
 			<button   class="MiBotonUTN" onclick="VerificarPrimo()" >d-Verificar si es primo</button>
 			<button   class="MiBotonUTN" onclick="NumerosPrimos()" >e-N&uacute;meros Primos</button>
